--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": ". ./env; nodemon -r esm --watch ./src ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": ". ./env.sh; nodemon -r esm --watch ./src ./src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:production": "node -r esm ./src/index.js"
   },
   "keywords": [],
   "author": "",
