--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": ". ./env; nodemon -r esm --watch ./src ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:production": "node -r esm ./src/index.js"
   },
   "keywords": [],
   "author": "",
